--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             </button>
             
             <nav class="navigation" aria-label="主导航" role="navigation">
-                <a href="https://deerwan.github.io" class="nav-item" rel="noopener" target="_blank" aria-describedby="external-link-notice">
+                <!-- <a href="https://deerwan.github.io" class="nav-item" rel="noopener" target="_blank" aria-describedby="external-link-notice">
                     博客<span class="sr-only">（在新窗口打开）</span>
-                </a>
+                </a> -->
                 <a href="#navigation" class="nav-item" aria-describedby="nav-description">导航</a>
-                <a href="#guestbook" class="nav-item" aria-describedby="guestbook-description">留言</a>
+                <!-- <a href="#guestbook" class="nav-item" aria-describedby="guestbook-description">留言</a> -->
                 <a href="#friends" class="nav-item" aria-describedby="friends-description">友链</a>
-                <a href="#about" class="nav-item" aria-describedby="about-description">关于</a>
+                <!-- <a href="#about" class="nav-item" aria-describedby="about-description">关于</a> -->
                 
                 <!-- 屏幕阅读器说明 -->
                 <div class="sr-only">
