--- a/index.html
+++ b/index.html
@@ -308,14 +308,14 @@
                 <div class="nav-category">
                     <h3><i class="fas fa-rocket" aria-hidden="true"></i> 自用应用</h3>
                     <div class="nav-links">
-                        <a class="nav-link-item" href="https://nezha.952780.xyz/" target="_blank" rel="noopener">
+                        <a class="nav-link-item" href="https://nezha.xinxi.pp.ua/" target="_blank" rel="noopener">
                             <span class="nav-icon emoji-icon">🚀</span>
                             <div>
                                 <div class="nav-name">Nezha</div>
                                 <div class="nav-desc">服务器监控</div>
                             </div>
                         </a>
-                        <a class="nav-link-item" href="https://status.106996.xyz/" target="_blank" rel="noopener">
+                        <a class="nav-link-item" href="https://kuma.xinxi.pp.ua/" target="_blank" rel="noopener">
                             <img src="https://www.faviconextractor.com/favicon/status.106996.xyz" alt="应用2" width="32" height="32" class="nav-icon">
                             <div>
                                 <div class="nav-name">Uptimerobot</div>
