--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                 <div class="nav-desc">导航卡片管理</div>
                             </div>
                         </a>
-                        <a class="nav-link-item" href="https://ssh.cmliussss.net/" target="_blank" rel="noopener">
+                        <a class="nav-link-item" href="https://webssh.xinxi.pp.ua/" target="_blank" rel="noopener">
                             <img src="https://www.faviconextractor.com/favicon/ssh.cmliussss.net" alt="WebSSH" width="32" height="32" class="nav-icon">
                             <div>
                                 <div class="nav-name">WebSSH</div>
